# Atelier_CMAKE

./: CMakeLists.txt
src/: main.c
